--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(../img/rick-morty-ultimos-episodios1-scaled-e1667923673907.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 /* Navbar */
 
 .navbar {
     background-color: black;
+    opacity: 0.7;
     color: white;
     height: 20vh;
     width: 100%;
@@ -50,7 +51,7 @@ main {
 
 #searchCharacters {
     height: 30px;
-    width: 300px;
+    width: 500px;
     padding: 10px;
     border: solid 1px;
     border-radius: 25px;
@@ -114,7 +115,7 @@ main {
     color: #fff;
     border: solid 1px black;
     padding: 10px 15px;
-    margin: 0 5px;
+    margin: 0 20px;
     cursor: pointer;
     font-size: 16px;
     border-radius: 8px;
@@ -144,10 +145,14 @@ main {
 
 footer {
     background-color: black;
+    opacity: 0.7;
     color: white;
     height: 10vh;
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    font-size: small;
 }
+
