--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(../img/rick-morty-ultimos-episodios1-scaled-e1667923673907.jpg);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 100vh;
 }
 
 /* Navbar */
 
 .navbar {
-    background-color: black;
-    opacity: 0.7;
+    /* background-color: black; */
+    /* opacity: 0.7; */
     color: white;
     height: 20vh;
     width: 100%;
@@ -26,12 +26,13 @@ body {
 }
 
 .img-nav {
-    height: 18vh;
+    height: 20vh;
     padding: 10px;
 }
 
 .title-page {
-    height: 20vh;
+    height: 17vh;
+    margin-top: 10px;
     
 }
 
@@ -41,12 +42,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-image: url(../img/rick-morty-ultimos-episodios1-scaled-e1667923673907.jpg);
-    background-repeat: no-repeat;
-    background-size: 100vw 70vh; */
-    /* height: 70vh; */
     width: 100%;
-    /* background-position: 100% 70vh; */
+    height: 75vh;
+    
 }
 
 #searchCharacters {
@@ -57,6 +55,17 @@ main {
     border-radius: 25px;
     margin-top: 20px;
     text-align: center;
+    -webkit-box-shadow: 0px 1px 12px 10px rgba(0,0,0,0.8);
+    -moz-box-shadow: 0px 1px 12px 10px rgba(0,0,0,0.8);
+    box-shadow: 0px 1px 12px 10px rgba(0,0,0,0.8);
+}
+
+.container {
+    display: block;
+    width: 100%;
+    height: 60vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 
 .characters {
@@ -64,6 +73,7 @@ main {
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     margin: 0 20px;
+    
 }
 
 .card {
@@ -78,6 +88,10 @@ main {
     transition: filter 0.2s ease-in-out;
     margin-bottom: 20px;
     width: 200px;
+}
+
+.card:hover{
+    background-color: aquamarine;
 }
 
 .card img {
@@ -101,6 +115,7 @@ main {
 }
 
 /* Estilo para a div de paginação */
+
 .pagination {
     display: flex;
     justify-content: center;
@@ -110,6 +125,7 @@ main {
   }
   
   /* Estilo para os botões de página */
+
   .pagination button {
     background-color: #087F5B;
     color: #fff;
@@ -119,6 +135,10 @@ main {
     cursor: pointer;
     font-size: 16px;
     border-radius: 8px;
+  }
+
+  .pagination button:hover {
+    background-color: grey;
   }
   
   .status-alive:before {
@@ -147,7 +167,7 @@ footer {
     background-color: black;
     opacity: 0.7;
     color: white;
-    height: 10vh;
+    height: 5vh;
     width: 100%;
     display: flex;
     flex-direction: row;
