--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,6 @@ body {
 /* Navbar */
 
 .navbar {
-    /* background-color: black; */
-    /* opacity: 0.7; */
     color: white;
     height: 20vh;
     width: 100%;
@@ -87,7 +85,7 @@ main {
     box-shadow: 0px 8px 24px 0 rgba(29, 140, 242, 0.16);
     transition: filter 0.2s ease-in-out;
     margin-bottom: 20px;
-    width: 200px;
+    width: 100%;
 }
 
 .card:hover{
