--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ main {
     height: 0.7rem;
     width: 0.7rem;
     margin-right: 0.375rem;
-    background: rgb(9, 23, 90);
+    background: #2948e4;
     border-radius: 50%;
     display: block;
   }
